2010-03-14  Juri Linkov  <juri@jurta.org>

	Add finder unknown keywords.

	* finder.el (finder-unknown-keywords): New function.

	* info.el (Info-finder-find-node): Use `finder-unknown-keywords'
	to create a Finder node with unknown keywords.

2010-03-14  Juri Linkov  <juri@jurta.org>

	* finder.el (finder-compile-keywords): Replace `princ' with
	`prin1' on a list of symbols interned from keyword strings.

	* emacs-lisp/lisp-mnt.el (lm-keywords-list): If `keywords' contains
	a comma, then split keywords using a comma and optional whitespace.
	Otherwise, split by whitespace.

	* complete.el:
	* face-remap.el:
	* log-view.el:
	* net/hmac-def.el:
	* net/hmac-md5.el:
	* net/netrc.el:
	* progmodes/mixal-mode.el: Fix keywords.

2010-03-13  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (ELCFILES): Add net/secrets.elc.

	* net/secrets.el: New file.

2010-03-12  Chong Yidong  <cyd@stupidchicken.com>

	* facemenu.el (list-colors-display, list-colors-print): New arg
	callback.  Use it to allow selecting colors.

	* wid-edit.el (widget-image-insert): Insert image prop even if the
	current display is non-graphic.
	(widget-field-value-set): New fun.
	(editable-field): Use it.
	(widget-field-value-get): Clean up unused var.
	(widget-color-value-create, widget-color--choose-action): New
	funs.  Allow using list-colors-display to choose color.

2010-03-12  Chong Yidong  <cyd@stupidchicken.com>

	* cus-edit.el: Resort topmost custom groups.
	(custom-buffer-sort-alphabetically): Default to t.
	(customize-apropos): Use apropos-parse-pattern.
	(custom-search-field): New var.
	(custom-buffer-create-internal): Add custom-apropos search field.
	(custom-add-parent-links): Don't display parent doc.
	(custom-group-value-create): Don't sort top-level custom group.
	(custom-magic-value-create): Show visibility button before option
	name.

	(custom-variable-state): New fun, from custom-variable-state-set.
	(custom-variable-state-set): Use it.