@@ -1,3 +1,9 @@
+2010-03-15  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/secrets.el (top): Register the D-Bus signals only when the
+	service "org.freedesktop.secrets" can be pinged.  Provide
+	subfeature 'enabled.
+
 2010-03-14  Juri Linkov  <juri@jurta.org>
 
 	Add finder unknown keywords.
